main page overflow stopped

--- a/my-plants-app/style.css
+++ b/my-plants-app/style.css
@@ -66,7 +66,7 @@ body {
   align-items: center;
   background-color: #e8ebe6;
   position: relative;
-  /*  overflow: hidden; */
+  overflow: hidden;
 }
 
 .curve-shape {
